# lightdance

./: .gitignore  CLAUDE.md  DATA_STRUCTURE_MIGRATION.md  README.md  REFACTOR_SUMMARY.md  docker-compose.dev.yml  docker-compose.prod.yml  run-deploy.sh  todo.md
.github/workflows/: pr-checks.yml
backend/: main.py  models.py  pyproject.toml
docs/: network-architecture-refactor-plan.md  troubleshooting-login-500.md
frontend/: vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Armor.css  Armor.jsx  ControlPanel.css  ControlPanel.jsx  DancerToggle.css  DancerToggle.jsx  Item.jsx  LoadData.jsx  People.jsx
frontend/src/components/WelcomeMotion/: MotionNYCU.jsx
frontend/src/components/audio/: Timeline.css  Timeline.jsx  audioplayer.css  audioplayer.jsx  waveform.jsx
frontend/src/config/: api.js
frontend/src/pages/: EditActionTable.jsx  Home.jsx  Welcome.jsx
frontend/src/redux/: actions.js
frontend/src/redux/reducers/: profiles.js
frontend/src/utils/: dataConverter.js
nginx/: default.conf
光表/: dance_data.json  light.cpp  light_data.json
