[project]
name = "backend"
version = "0.1.0"
description = "LightDance Backend API - 燈光舞蹈控制系統後端服務"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[tool.setuptools]
py-modules = ["main", "models"]
